# BakkeryModel

./: .dockerignore  .gitignore  Dockerfile  README.md  annotations.csv  app.py  data_and_labels.csv  docker-compose-dev.yaml  docker-compose.yaml  model.pth  predict_table.txt  pyproject.toml  requirements.txt  tutorial.py
.github/: copilot-instructions.md
Documentation/startup/: requirements.txt
install/: custom_install.sh  requirements_torch.txt
models/: bread_model_v1.pth  bread_model_v2.pth
ready_models/: bakkery_model_v1.pth
src/: BreadData.py  __init__.py  breadlabel_transformer.py  const.py  map_bread.py
src/api/: predict_controller.py  predict_function.py  training_script.py
src/datasets/: bread_data.py
src/domain/: __init__.py  log_entity.py  map_bread.py  model_result.py  prediction.py
src/model/: __init__.py  bread_model.py
src/services/: __init__.py  breadlabel_transformer.py  image_retrieval.py  inference_pipeline.py  label_manager.py  meta_data_service.py  model_pipeline.py  training_pipeline.py
