[project]
name = "bread-checkout-software"
version = "0.1.0"
description = ""
authors = [
    {name = "Xin Wang",email = "Xin20Wang@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "polars (>=1.35.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "meiosis (>=0.1.5,<0.2.0)",
    "mlflow (>=3.8.1,<4.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

