[project]
name = "bread-checkout-software"
version = "0.1.0"
description = ""
authors = [
    {name = "Xin Wang",email = "Xin20Wang@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pillow (>=12.0.0,<13.0.0)",
    "meiosis (>=0.1.5,<0.2.0)",
    "mlflow (>=3.8.1,<4.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

